<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
            android:id="@+id/drawer_menu">
        <item
                android:id="@+id/nav_todo"
                android:icon="@drawable/ic_menu_todo"
                android:title="@string/menu_todo" />
        <item
                android:id="@+id/nav_game"
                android:icon="@drawable/ic_menu_game"
                android:title="@string/menu_game" />
        <item
                android:id="@+id/nav_filter"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_filter" />
    </group>
</menu>